container-k8s/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-app-svc
  namespace: musluck
spec:
  selector:
    app: api-app
  ports:
    - port: 3000
      targetPort: 3000
