container-k8s/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-app
  namespace: musluck
spec:
  ingressClassName: public
  rules:
    - host: api.musluck.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-app-svc
                port:
                 number: 3000
